Changes in @NEW@:
  o Bug Fixes:
    * A bug in the getChangeSetFingerprints call that resulted in
      fingerprints different from those calculated by Conary proxies has
      been corrected.
    * Rollbacks would fail if a file type had changed before and after the
      relevant update had been appliend (CNY-3340)

Changes in 2.1.5:
  o Bug Fixes:
    * PythonSetup now respects the r.macros.pyver if it is set;
      r.macros.pyver now reflects the currently running version of
      python if it is not set by other means. (CNY-3325)
    * The documentation for the Automake build action was corrected.
      (CNY-3329)
    * A bug in unusual commit paths, that would cause repositories to
      not store file contents for contents which were part of capsules
      as well as part of normal troves, was fixed. (CNY-3332)
    * RPM capsules properly update when files stayed the same between
      old and new versions of the RPM. (CNY-3335)
    * Ghost symlinks shared between multiple capsules being packaged
      together as part of the same conary source component no longer
      cause the build to fail. (CNY-3336)

Changes in 2.1.4:
  o Bug Fixes:
    * A redundant check that could trigger an assertion error in
      the lazy cache code has been removed. (CNY-3331)

Changes in 2.1.3
  o New Features:
    * Conary now stores RPM obsolete information as troveinfo data.
      (CNY-3328)

  o Bug Fixes:
    * Building rpm capsules properly eliminates dependencies in the
      RPM namespace that are also discovered by Conary. (CNY-3318)

Changes in 2.1.2:
  o New Features:
    * Conary now runs all destdir policies for capsule packages.
      Previously, it disabled destdir policies to avoid unintentional
      modification; now all destdir policies should take capsules
      into account and some destdir policies are required. (CNY-3320)
    * Scripts from capsules are now written as files that are not
      packaged but are available for inspection during the packaging